[tool.poetry]
name = "url-prober"
version = "0.1.0rc2"
description = "A tool to request a specified `url` and return the response."
authors = ["Andrew Vella"]
readme = "README.md"
packages = [{include = "url_prober", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
click = "^8.1.0"
rich = "^13.0.0"
flask = "^3.0.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
url-prober = "url_prober.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
